@startuml
skinparam monochrome true
skinparam shadowing false
' !theme mono
!theme crt-amber
skinparam classAttributeIconSize 0
namespace transportation {

  ' Position struct for sensor mounting
  class Position <<struct>> {
    + x : Double
    + y : Double
    + z : Double
  }

  ' Inheritance hierarchy
  abstract class Vehicle {
    - id : String
    - currentLocation : Location
    - status : VehicleStatus
    - route : Route
    - maxPassengers : Integer
    - currentPassengerCount : Integer
    __
    + {abstract} drive() : void
    + updateLocation(location : Location) : void
    + getStatus() : VehicleStatus
    + setRoute(route : Route) : void
    + getRoute() : Route
    + pickupPassenger(passenger : Passenger) : void
    + dropoffPassenger(passenger : Passenger) : void
  }

  class RoboTaxi {
    - sensors : List<Sensor>
    __
    + drive() : void
    + addSensor(sensor : Sensor) : void
  }

  class Taxi {
    - driver : Driver
    __
    + drive() : void
    + assignDriver(driver : Driver) : void
    + removeDriver() : void
    + getDriver() : Driver
  }

  class Driver {
    - id : String
    - name : String
    - licenseNumber : String
    - rating : Float
    __
    + getId() : String
    + getName() : String
    + getLicenseNumber() : String
    + getRating() : Float
  }

  ' Composition - Sensors are part of RoboTaxi
  class Sensor {
    - sensorId : String
    - sensorType : SensorType
    - positionOnVehicle : Position
    __
    + readData() : SensorData
    + calibrate() : void
    + getType() : SensorType
    + getSensorId() : String
  }

  enum SensorType {
    LIDAR
    CAMERA
    RADAR
    GPS
    IMU
  }

  enum VehicleStatus {
    IDLE
    IN_SERVICE
    EN_ROUTE
    CHARGING
    MAINTENANCE
    OUT_OF_SERVICE
  }

  ' Aggregation - Fleet contains Vehicles
  class Fleet {
    - id : String
    - operatorName : String
    - serviceArea : List<Location>
    - vehicles : List<Vehicle>
    __
    + addVehicle(vehicle : Vehicle) : void
    + removeVehicle(vehicle : Vehicle) : void
    + getAvailableVehicles() : List<Vehicle>
    + dispatchVehicle(pickup : Location, dropoff : Location) : Vehicle
    + getId() : String
    + getOperatorName() : String
  }

  class Route {
    - id : String
    - waypoints : List<Location>
    __
    + addWaypoint(location : Location) : void
    + optimizeRoute() : void
    + getDistance() : Double
    + getId() : String
    + getWaypointCount() : Integer
  }

  class Location {
    - latitude : Double
    - longitude : Double
    __
    + distanceTo(other : Location) : Double
    + getLatitude() : Double
    + getLongitude() : Double
  }

  class Passenger {
    - id : String
    - name : String
    - phoneNumber : String
    - currentVehicle : Vehicle
    __
    + requestRide(pickup : Location, dropoff : Location) : void
    + getId() : String
    + getName() : String
  }

  ' Relationships
  Vehicle <|-- RoboTaxi
  Vehicle <|-- Taxi

  RoboTaxi "1" *-- "1..*" Sensor : equipped with
  Taxi "0..1" --> "1" Driver : operated by
  Fleet "1" o-- "0..*" Vehicle : manages
  Vehicle "1" --> "0..1" Route : follows
  Sensor "* " --> "1" SensorType : has type
  Sensor "1" *-- "1" Position : has position
  Vehicle "1" --> "1" Location : located at
  Vehicle "1" --> "1" VehicleStatus : has status
  Route "1" *-- "1..*" Location : consists of
  Passenger "0..*" --> "0..1" Vehicle : rides in
  Passenger "0..*" --> "1" Fleet : requests from

}
@enduml